<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analisis_ambiental"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="38dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/inputEnergia"
            style="@drawable/edit_text_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/energiaa"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/inputAgua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumo_de_agua_litros"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/inputResiduos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generaci_n_de_residuos_kg"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/inputReciclaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_bitos_de_reciclaje"
            android:inputType="numberDecimal"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_huella_ambiental"
            android:backgroundTint="@color/rosado"
            />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_resultados"
            android:backgroundTint="@color/rosado"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
